Fix x is typing alignment

--- a/src/components/primary/chat/_chatbox.scss
+++ b/src/components/primary/chat/_chatbox.scss
@@ -120,7 +120,7 @@
     .typing-2GQL18{
         height: 20px;
         top: -20px;
-        right: 24px;
+        right: 37px;
         bottom: unset;
         background-color: transparent;
         font-size: 11px;
